# rose-offline-client

./: .gitignore  Cargo.toml
launcher/: Cargo.toml
launcher/src/: main.rs
src/: lib.rs  main.rs
src/audio/: mod.rs
src/components/: mod.rs  model_height.rs
src/events/: player_command_event.rs
src/resources/: mod.rs  sound_config.rs
src/systems/: background_music_system.rs  client_entity_event_system.rs  mod.rs  name_tag_system.rs  player_command_system.rs  run_toggle_system.rs  vehicle_model_height_system.rs
src/ui/: ui_character_create_system.rs  ui_debug_window_system.rs  ui_hotbar_system.rs  ui_player_info_system.rs  ui_quest_list_system.rs  ui_settings_system.rs  ui_skill_list_system.rs  ui_status_effects_system.rs
tools/titan_extractor/: Cargo.toml
tools/titan_extractor/src/: main.rs
