[package]
name = "rose-offline-launcher"
version = "0.1.0"
edition = "2021"

# Deliberately not part of the main crate's dependency graph / [patch.crates-io]
# forks (bevy/egui/etc pinned in ../Cargo.toml) - this is a small standalone
# GUI tool that just shells out to the built rose-offline-client(.exe).

[dependencies]
eframe = "0.27"
egui = "0.27"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5.0"
rfd = "0.14"

[[bin]]
name = "rose-offline-launcher"
path = "src/main.rs"
